Bug 989958 - Expose PRESSED state on a native button element and remove CHECKABLE state from toggle buttons, r=surkov, r=eeejay