accessible/src/generic/Accessible.cpp
@@ -1573,6 +1573,10 @@ Accessible::ApplyARIAState(uint64_t* aState) const
     }    
   }
 
+  // special case: A native button element whose role got transformed by ARIA to a toggle button
+  if (IsButton())
+    aria::MapToState(aria::eARIAPressed, element, aState);
+
   if (!mRoleMapEntry)
     return;
 
