accessible/src/jsat/OutputGenerator.jsm
@@ -632,6 +632,11 @@ this.UtteranceGenerator = {
       stateUtterances.push(Utils.stringBundle.GetStringFromName(statetr));
     }
 
+    if (aState.contains(States.PRESSED)) {
+      stateUtterances.push(
+        Utils.stringBundle.GetStringFromName('statePressed'));
+    }
+
     if (aState.contains(States.EXPANDABLE)) {
       let statetr = aState.contains(States.EXPANDED) ?
         'stateExpanded' : 'stateCollapsed';
@@ -783,7 +788,7 @@ this.BrailleGenerator = {
     _useStateNotRole: function _useStateNotRole(aAccessible, aRoleStr, aState, aFlags) {
       let braille = [];
 
-      let desc = this._getLocalizedState(aState);
+      let desc = this._getLocalizedState(aState, aAccessible.role);
       braille.push(desc.join(' '));
 
       this._addName(braille, aAccessible, aFlags);
@@ -831,24 +836,25 @@ this.BrailleGenerator = {
     }
   },
 
-  _getLocalizedState: function _getLocalizedState(aState) {
+  _getLocalizedState: function _getLocalizedState(aState, aRole) {
     let stateBraille = [];
 
-    let getCheckedState = function getCheckedState() {
+    let getResultMarker = function getResultMarker(aMarker) {
+      // aMarker is a simple boolean.
       let resultMarker = [];
-      let state = aState;
-      let fill = state.contains(States.CHECKED) ||
-        state.contains(States.PRESSED);
-
       resultMarker.push('(');
-      resultMarker.push(fill ? 'x' : ' ');
+      resultMarker.push(aMarker ? 'x' : ' ');
       resultMarker.push(')');
 
       return resultMarker.join('');
     };
 
     if (aState.contains(States.CHECKABLE)) {
-      stateBraille.push(getCheckedState());
+      stateBraille.push(getResultMarker(aState.contains(States.CHECKED)));
+    }
+
+    if (aRole === Roles.TOGGLE_BUTTON) {
+      stateBraille.push(getResultMarker(aState.contains(States.PRESSED)));
     }
 
     return stateBraille;
